--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -4,7 +4,7 @@
   > header
     .secondary-header, .primary-header
       display: none
-      
+
   > .main
     padding-top: 0
 
@@ -12,10 +12,10 @@
   color: $text-color
   font-family: $primary-font
   font-size: 32px
-  
+
   @media screen and (max-width: $break-small)
     font-size: 24px
-    
+
 .cart-holder
   -webkit-overflow-scrolling: touch
   background-color: $background-color
@@ -28,7 +28,7 @@
   top: 0
   width: 100%
   z-index: 200
-  
+
   @media screen and (max-width: $break-medium) and (orientation: portrait)
     height: 100vh
 
@@ -38,27 +38,27 @@
     top: 0
     left: 0
     width: 100%
-    
+
   .store-link
     font-size: 40px
-    
+
 .cart-content
   margin: 0 auto 32px
   max-width: 800px
   width: 100%
-  
+
   @media screen and (max-width: $break-small)
     padding: 0 20px 32px
-  
+
 .cart-empty-message
   font-size: 20px
   line-height: 30px
   text-align: center
-  
+
   @media screen and (max-width: $break-small)
     font-size: 14px
     line-height: 24px
-    
+
   a
     text-decoration: underline
 
@@ -74,7 +74,7 @@
   font-family: $secondary-font
   font-size: 16px
   padding: 24px 0
-  
+
   @media screen and (max-width: $break-small)
     +flex-wrap(wrap)
 
@@ -82,62 +82,64 @@
   +flexbox
   +align-items(center)
   width: 60%
-  
+
   @media screen and (max-width: $break-small)
     +flex-basis(90%)
-  
+
 .item-details
   line-height: 1.5em
   padding: 0 32px 0 24px
-  
+
   @media screen and (max-width: $break-small)
     line-height: 1.1em
-  
+
 .item-details-name
   font-family: $primary-font
-  
+
 .item-quantity-holder
   +flexbox
+  +align-items(center)
   padding-right: 30px
-  
+
   @media screen and (max-width: $break-small)
     order: 3
     margin-left: 0
     margin-top: 20px
     max-width: 50%
-    
+
 .item-details-price
   margin-left: auto
-  
+
   @media screen and (max-width: $break-small)
     order: 4
     margin-top: 20px
-  
+
 .item-details-option
-  font-size: 10px
+  font-size: 12px
   margin-top: 6px
-  
+
 .qty-button
   background: none
   border: none
-  height: 24px
+  height: 30px
   outline: none
   padding: 0
-  width: 24px
-  
+  width: 30px
+
   &.remove-qty
     margin-left: auto
     text-align: right
-    
+
     @media screen and (max-width: $break-small)
       +flex-basis(10%)
       order: 2
-  
+
   svg
+    display: block
     fill: $text-color
-    height: 24px
-    width: 24px
-  
+    height: 30px
+    width: 30px
+
 .qty-input
   border: none
   height: 24px
@@ -145,7 +147,7 @@
   padding: 0
   text-align: center
   width: 64px
-  
+
   @media screen and (max-width: $break-small)
     font-size: 16px
     width: 54px
@@ -157,13 +159,13 @@
   height: 100px
   min-width: 100px
   width: 100px
-  
+
 .checkout-btn
   margin-top: 32px
-  
+
   @media screen and (max-width: $break-small)
     font-size: 14px
-  
+
   @media screen and (max-width: $break-medium) and (orientation: portrait)
     bottom: 0
     left: 0
