--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -2,6 +2,7 @@
 
 .product-page-title
   font-size: 32px
+  margin: 0
 
   @media screen and (max-width: $break-medium) and (orientation: portrait)
     display: none
