--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -136,6 +136,7 @@
   position: absolute
   top: calc(100vh + 100px)
   width: 100%
+  z-index: 99
 
   @media screen and (max-width: $break-medium)
     margin-top: 60px
